[gd_scene load_steps=4 format=3 uid="uid://bna0h3rvgxqur"]

[ext_resource type="Script" uid="uid://cfng4jur507cq" path="res://scripts/enemies/EnemyBase.gd" id="1_a7egk"]
[ext_resource type="SpriteFrames" uid="uid://b6fp05v6qy8us" path="res://resources/sprite_frames/aligator.tres" id="2_ufl0x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0s11"]
size = Vector2(16, 16)

[node name="Aligator" type="AnimatableBody2D"]
script = ExtResource("1_a7egk")
metadata/_custom_type_script = "uid://cfng4jur507cq"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_ufl0x")
animation = &"walk_right"

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="ray_r" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)
collide_with_areas = true

[node name="ray_l" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)
collide_with_areas = true

[node name="ray_u" type="RayCast2D" parent="."]
target_position = Vector2(0, -12)
collide_with_areas = true

[node name="ray_d" type="RayCast2D" parent="."]
target_position = Vector2(0, 12)
collide_with_areas = true

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d0s11")
